# PESDT

./: .gitignore  LICENSE  PESDT_GUI.py  PESDT_GUI_Qt6.py  PESDT_dev_env  PESDT_env  PESDT_env_JDC  PESDT_plot.py  PESDT_run.py  README.md  __init__.py  amread.py  analyse.py  plot_edge2d.py  process.py  pyproject.toml
PESDTCache/: readme.md
PESDT_addon-master/: continuo_.h  pyproject.toml  requirements.txt  setup.py
PESDT_addon-master/cherab/PESDT_addon/: Line.pxd  Line.pyx  LineEmitters.pxd  LineEmitters.pyx  LineEmitters_quick.c  LineShapes.pxd  LineShapes.pyx  Maxwellian.pxd  Maxwellian.pyx  PESDT_plasma.py  PlasmaModel.pxd  PlasmaModel.pyx  RateFunctions.c  RateFunctions.pxd  RateFunctions.pyx  Species.pxd  Species.pxd-dev  Species.pyx  __init__ .pxd  __init__.py  am_edge2d.py  am_solps.py  amread.py  amread.pyx-dev  continuo.pxd  continuo.pyx  eirene_functions.pxd  eirene_functions.pyx  inhomogenous.pxd  inhomogenous.pyx  material.pxd  material.pyx  maxwellian.pyx  mesh_geometry.py  node.pxd  node.pyx  quadrilateral_functions.pxd  quadrilateral_functions.pyx  spectrum.pxd  spectrum.pyx  (+2 more)
PESDT_addon-master/cherab_PESDT_addon.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
Wunderlich_PopKoeff_n=3_23May25/: PopKoeff_n=3_from_H.txt  PopKoeff_n=3_from_H2.txt
amjuel_data-master/: setup.py
cherab_bridge/: __init__.py  cherab_AMJUEL_data.py  cherab_atomic_data.py  cherab_plasma.py  createCherabPlasma.py  edge2d_cherab_bridge.py  run_cherab_bridge.py  solps_cherab_bridge.py
core/: JET_mesh_from_grid.py  __init__.py  analyse.py  cherab_AMJUEL_data.py  continuo.py  (+7 more)
(+64 files in other folders)
