[build-system]
requires = [
    "setuptools>=61",
    "wheel",
    "Cython>=3.0",
    "numpy>=2.0"
]
build-backend = "setuptools.build_meta"

[project]
name = "cherab-PESDT-addon"
version = "2.0.dev"

dependencies = [
    "numpy>=2.0",
    "scipy",
    "cherab==1.5.0.1",
    "raysect>=0.9.1",
    "matplotlib>=3.5"
]